--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -49,6 +49,8 @@
         "position": "Chức danh",
         "role": "Vai trò",
         "image": "Ảnh đại diện",
-        "save": "Lưu"
+        "save": "Khởi tạo",
+        "edit": "Sửa",
+        "cancel": "Hủy"
     }
 }
