--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -49,6 +49,8 @@
         "position": "Position",
         "role": "Role",
         "image": "Avatar",
-        "save": "Save"
+        "save": "Save",
+        "edit": "Edit",
+        "cancel": "Cancel"
     }
 }
