--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -35,6 +35,9 @@
             "manage-specialty": "manage Specialties",
             "handbook": "Handbook",
             "manage-handbook": "Manage handbook"
+        },
+        "doctor": {
+            "manage-schedule": "Manage Doctor's schedule"
         }
     },
     "manage-user": {
