--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -37,7 +37,8 @@
             "manage-handbook": "Quản lý Cẩm nang"
         },
         "doctor": {
-            "manage-schedule": "Quản lý kế hoạch khám bệnh"
+            "manage-schedule": "Quản lý kế hoạch khám bệnh",
+            "manage-patient": "Quản lý lịch khám bệnh"
         }
     },
     "manage-user": {
